# ommnia_permission_tree

./: README.md  pyproject.toml
ommnia_permission_tree/: __init__.py  permission_tree.py
tests/: __init__.py  test_permission_tree.py
